# nextpipe

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  python-lint.yml  python-test.yml  release.yml
examples/pipeline-chain/: README.md  main.py  requirements.txt
examples/pipeline-complex/: README.md  main.py  requirements.txt
examples/pipeline-ensemble/: README.md  app.yaml  main.py
examples/pipeline-preprocess/: README.md  main.py
nextpipe/: __init__.py  decorators.py  flow.py
tests/: test_version.py
